--- a/src/styles/DeviceItem.css
+++ b/src/styles/DeviceItem.css
@@ -8,9 +8,16 @@
     background-color: white;
 }
 
+.imgBox{
+    max-width: 40%;
+    height: auto;
+    max-height: 300px;
+}
+
 .img{
-    width: 20%;
-    padding: 5px 5px 5px;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 10px 10px 10px;
 }
 
 .info{
