--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -79,6 +79,18 @@
     height: auto;
 }
 
+.exRate{
+    background-color: white;
+    color: black;
+    border: 1px solid white;
+}
+
+.exRate:hover{
+    background-color: white;
+    color: purple;
+    border: 1px solid purple;
+}
+
 .login{
     height: 40px;
     display: flex;
